updated modes