@@ -22,6 +22,7 @@
  * --- Modification Notice ---
  * Changes made by Campbell Reed (2025):
  * - Fixed a typo in the FM mode definition to ensure proper mode selection.
+ * Added ADIF 3.1.5 modes 
  *
  * This modification retains the original GPL licensing terms and ensures that
  * the software remains free and open-source.
@@ -97,146 +98,72 @@ public class Mode {
    //**********
    private String                    _description ;
    
-   public static final Mode Blank    = new Mode("") ;   
-   public static final Mode Unknown  = new Mode("Unknown") ;
-   public static final Mode LSB      = new Mode("LSB") ;
-   public static final Mode USB      = new Mode("USB") ;
-   public static final Mode SSB      = new Mode("SSB") ;
-   public static final Mode CW       = new Mode("CW") ;
-   public static final Mode FM       = new Mode("FM") ;
-   public static final Mode AM       = new Mode("AM") ;
-   public static final Mode ASCI     = new Mode("ASCI") ;
-   public static final Mode ATV      = new Mode("ATV") ;
-   public static final Mode CLO      = new Mode("CLO") ;
-   public static final Mode FAX      = new Mode("FAX") ;
-   public static final Mode FSK      = new Mode("FSK") ;
-   public static final Mode FSK441   = new Mode("FSK441") ;
-   public static final Mode GTOR     = new Mode("GTOR") ;
-   public static final Mode HELL     = new Mode("HELL") ;
-   public static final Mode HFSK     = new Mode("HFSK") ;
-   public static final Mode JT44     = new Mode("JT44") ;
-   public static final Mode JT65     = new Mode("JT65") ;
-   public static final Mode MFSK8    = new Mode("MFSK8") ;
-   public static final Mode MFSK16   = new Mode("MFSK16") ;
-   public static final Mode MTTY     = new Mode("MTTY") ;
-   public static final Mode MT63     = new Mode("MT63") ;
-   public static final Mode OLIVIA   = new Mode("OLIVIA") ;
-   public static final Mode PAC      = new Mode("PAC") ;
-   public static final Mode PAC2     = new Mode("PAC2") ;
-   public static final Mode PAC3     = new Mode("PAC3") ;
-   public static final Mode PCW      = new Mode("PCW") ;
-   public static final Mode PKT      = new Mode("PKT") ;
-   public static final Mode PSK31    = new Mode("PSK31") ;
-   public static final Mode PSK63    = new Mode("PSK63") ;
-   public static final Mode PSK125   = new Mode("PSK125") ;
-   public static final Mode Q15      = new Mode("Q15") ;
-   public static final Mode RTTY     = new Mode("RTTY") ;
-   public static final Mode SSTV     = new Mode("SSTV") ;
-   public static final Mode THRB     = new Mode("THRB") ;
-   public static final Mode TOR      = new Mode("TOR") ;
-   public static final Mode FT8      = new Mode("FT8") ;
-   public static final Mode FT4      = new Mode("FT4") ;
-   public static final Mode MSK144      = new Mode("MSK144") ;
-   public static final Mode WSPR      = new Mode("WSPR") ;
-   public static final Mode THOR      = new Mode("THOR") ;
-   public static final Mode DOMINO      = new Mode("DOMINO") ;
-   public static final Mode FREEDV      = new Mode("FREEDV") ;
+ public static final Mode Blank        = new Mode("");          // app convenience
+public static final Mode Unknown      = new Mode("Unknown");   // optional app value
+
+public static final Mode SSB          = new Mode("SSB");
+public static final Mode CW           = new Mode("CW");
+public static final Mode FM           = new Mode("FM");
+public static final Mode AM           = new Mode("AM");
+
+public static final Mode ATV          = new Mode("ATV");
+public static final Mode CLOVER       = new Mode("CLOVER");
+public static final Mode FAX          = new Mode("FAX");
+public static final Mode PACKET       = new Mode("PACKET");
+public static final Mode RTTY         = new Mode("RTTY");
+public static final Mode SSTV         = new Mode("SSTV");
+
+public static final Mode TOR          = new Mode("TOR");       // AMTOR/GTOR are submodes
+public static final Mode PACTOR       = new Mode("PACTOR");    // PAC2/PAC3 are submodes
+public static final Mode HELL         = new Mode("HELL");
+public static final Mode PSK          = new Mode("PSK");       // PSK31/63/125 are submodes
+public static final Mode MFSK         = new Mode("MFSK");      // MFSK8/16, FT8, FT4, MSK144, etc. are submodes
+public static final Mode DIGITALVOICE = new Mode("DIGITALVOICE"); // D-STAR/DMR/FreeDV are submodes
+
  
-   private static final Mode _values[] = {
-      Blank,
-      LSB,
-      USB,
-      SSB,
-      CW,
-      FM,
-      AM,
-      ASCI,
-      ATV,
-      CLO,
-      FAX,
-      FSK,
-      FSK441,
-      GTOR,
-      HELL,
-      HFSK,
-      JT44,
-      JT65,
-      MFSK8,
-      MFSK16,
-      MTTY,
-      MT63,
-      OLIVIA,
-      PAC,
-      PAC2,
-      PAC3,
-      PCW,
-      PKT,
-      PSK31,
-      PSK63,
-      PSK125,
-      Q15,
-      RTTY,
-      SSTV,
-      THRB,
-      TOR,
-      FT8,
-      FT4,
-      MSK144,
-      WSPR,
-      THOR,
-      DOMINO,
-      FREEDV,
-      
-   } ;
+  private static final Mode _values[] = {
+    Blank,
+    SSB,
+    CW,
+    FM,
+    AM,
+    ATV,
+    CLOVER,        // was CLO
+    FAX,
+    PACKET,        // was PKT
+    RTTY,
+    SSTV,
+    TOR,           // parent for AMTOR, GTOR, etc.
+    PACTOR,        // was PAC
+    HELL,
+    PSK,           // parent for PSK31/63/125
+    MFSK,          // parent for MFSK8/16
+    DIGITALVOICE   // e.g. D-STAR, DMR, FreeDV
+};
+
 
    /**
     * A mapping of the objects to the constants as Integers.  These valus MUST mimic _values.  ADIF 1.0 only uses a subset
     * of the total enumerations I've defined.  The ones that aren't use are commented out.
     */
    private static final Object[][] _intlookupData = {
-      {new Integer(0), Mode.Blank},
-      {new Integer(1), Mode.LSB},
-      {new Integer(2), Mode.USB},
-      {new Integer(3), Mode.SSB},
-      {new Integer(4), Mode.CW},
-      {new Integer(5), Mode.FM},
-      {new Integer(6), Mode.AM},
-      {new Integer(7), Mode.ASCI},
-      {new Integer(8), Mode.ATV},
-      {new Integer(9), Mode.CLO},
-      {new Integer(10), Mode.FAX},
-      {new Integer(11), Mode.FSK},
-      {new Integer(12), Mode.FSK441},
-      {new Integer(13), Mode.GTOR},
-      {new Integer(14), Mode.HELL},
-      {new Integer(15), Mode.HFSK},
-      {new Integer(16), Mode.JT44},
-      {new Integer(17), Mode.JT65},
-      {new Integer(18), Mode.MFSK8},
-      {new Integer(19), Mode.MFSK16},
-      {new Integer(20), Mode.MTTY},
-      {new Integer(21), Mode.MT63},
-      {new Integer(22), Mode.OLIVIA},
-      {new Integer(23), Mode.PAC},
-      {new Integer(24), Mode.PAC2},
-      {new Integer(25), Mode.PAC3},
-      {new Integer(26), Mode.PCW},
-      {new Integer(27), Mode.PKT},
-      {new Integer(28), Mode.PSK31},
-      {new Integer(29), Mode.PSK63},
-      {new Integer(30), Mode.PSK125},
-      {new Integer(31), Mode.Q15},
-      {new Integer(32), Mode.RTTY},
-      {new Integer(33), Mode.SSTV},
-      {new Integer(34), Mode.THRB},
-      {new Integer(35), Mode.TOR},
-      {new Integer(36), Mode.FT8},
-      {new Integer(37), Mode.FT4},
-      {new Integer(38), Mode.MSK144},
-      {new Integer(39), Mode.WSPR},
-      {new Integer(40), Mode.THOR},
-      {new Integer(41), Mode.DOMINO},
-      {new Integer(42), Mode.FREEDV},
+     { Integer.valueOf(0),  Mode.Blank },
+    { Integer.valueOf(3),  Mode.SSB },
+    { Integer.valueOf(4),  Mode.CW },
+    { Integer.valueOf(5),  Mode.FM },
+    { Integer.valueOf(6),  Mode.AM },
+    { Integer.valueOf(8),  Mode.ATV },
+    { Integer.valueOf(9),  Mode.CLOVER },   // CLO in your enum
+    { Integer.valueOf(10), Mode.FAX },
+    { Integer.valueOf(27), Mode.PACKET },   // PKT synonym
+    { Integer.valueOf(32), Mode.RTTY },
+    { Integer.valueOf(33), Mode.SSTV },
+    { Integer.valueOf(35), Mode.TOR },      // parent for AMTOR, GTOR, etc.
+    { Integer.valueOf(23), Mode.PACTOR },   // PAC synonym
+    { Integer.valueOf(14), Mode.HELL },
+    { Integer.valueOf(28), Mode.PSK },      // parent for PSK31/63/125
+    { Integer.valueOf(18), Mode.MFSK },     // parent for MFSK8/16
+    { Integer.valueOf(40), Mode.DIGITALVOICE } // e.g. D-STAR, DMR, etc.
    } ;
    
      
@@ -247,46 +174,22 @@ public class Mode {
       private static final Object[][] _strlookupData = {
          {new String(""), Mode.Blank},
          {new String("Unknown"), Mode.Unknown},
-         {new String("SSB"), Mode.SSB},
-         {new String("CW"), Mode.CW},
-         {new String("RTTY"), Mode.RTTY},
-         {new String("TOR"), Mode.TOR},
-         {new String("PKT"), Mode.PKT},
-         {new String("AM"), Mode.AM},
-         {new String("FM"), Mode.FM},
-         {new String("SSTV"), Mode.SSTV},
-         {new String("ATV"), Mode.ATV},
-         {new String("PAC"), Mode.PAC},
-         {new String("CLO"), Mode.CLO},
-         //
-         {new String("FAX"), Mode.FAX},
-         {new String("FSK"), Mode.FSK},
-         {new String("FSK441"), Mode.FSK441},
-         {new String("GTOR"), Mode.GTOR},
-         {new String("HELL"), Mode.HELL},
-         {new String("HFSK"), Mode.HFSK},
-         {new String("JT44"), Mode.JT44},
-         {new String("JT65"), Mode.JT65},
-         {new String("MFSK8"), Mode.MFSK8},
-         {new String("MFSK16"), Mode.MFSK16},
-         {new String("MTTY"), Mode.MTTY},
-         {new String("MT63"), Mode.MT63},
-         {new String("OLIVIA"), Mode.OLIVIA},
-         {new String("PAC2"), Mode.PAC2},
-         {new String("PAC3"), Mode.PAC3},
-         {new String("PCW"), Mode.PCW},
-         {new String("PSK31"), Mode.PSK31},
-         {new String("PSK63"), Mode.PSK63},
-         {new String("PSK125"), Mode.PSK125},
-         {new String("Q15"), Mode.Q15},
-         {new String("THRB"), Mode.THRB},
-         {new String("TOR"), Mode.TOR},
-         {new String("FT8"), Mode.FT8},
-         {new String("FT4"), Mode.FT4},
-         {new String("MSK144"), Mode.MSK144},
-         {new String("WSPR"), Mode.WSPR},
-         {new String("DOMINO"), Mode.DOMINO},
-         {new String("FREEDV"), Mode.FREEDV},
+         { "AM",             Mode.AM },
+         { "FM",             Mode.FM },
+         { "SSB",            Mode.SSB },
+         { "CW",             Mode.CW },
+         { "RTTY",           Mode.RTTY },
+         { "PSK",            Mode.PSK },
+         { "MFSK",           Mode.MFSK },
+         { "HELL",           Mode.HELL },        // Hellschreiber (mode)
+         { "SSTV",           Mode.SSTV },
+         { "ATV",            Mode.ATV },
+         { "FAX",            Mode.FAX },
+         { "PACKET",         Mode.PACKET },
+         { "PACTOR",         Mode.PACTOR },
+         { "CLOVER",         Mode.CLOVER },
+         { "TOR",            Mode.TOR },         // AMTOR/GTOR are SUBMODEs under TOR
+         { "DIGITALVOICE",   Mode.DIGITALVOICE },
    } ;
    
    private static final IntToObject _intToModeType = new IntToObject(_intlookupData, Mode.Unknown) ;
